# byze-miner

./: .gitignore  CMakeLists.txt  README.md
scripts/: bootstrap-debian.sh  build-byze-miner.sh  build.sh  install-byze-miner-systemd.sh  prove_architecture.sh
src/: byze_rxhash.cpp  main.cpp
